[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/lava_jet.png" type="Texture" id=1]
[ext_resource path="res://props/lava_laser/lava_laser.gd" type="Script" id=2]
[ext_resource path="res://props/lava_laser/lava_jet_hit.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/lava_jet.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "cycle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 32, 16 ), Vector2( 0, 16 ) ]
}

[node name="lava_laser" type="Polygon2D"]
texture = ExtResource( 1 )
texture_offset = Vector2( 0, 16 )
polygon = PoolVector2Array( 0, -4, 40, -4, 40, 4, 0, 4 )
script = ExtResource( 2 )

[node name="lava_animation" type="AnimationPlayer" parent="."]
autoplay = "cycle"
playback_process_mode = 0
playback_speed = 6.0
anims/cycle = SubResource( 1 )

[node name="lava_jet_hit" parent="." instance=ExtResource( 3 )]
position = Vector2( 40, 0 )

[node name="target_ray" type="RayCast2D" parent="."]
visible = false
position = Vector2( 3, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( 480, 0 )

[node name="death" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="death_collision" type="CollisionPolygon2D" parent="death"]
polygon = PoolVector2Array( 0, -1, 52, -1, 52, 1, 0, 1 )

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -18.0
attenuation = 16.0
bus = "sfx"
